Reject ECIP-1063 - Integrated decentralized oracles and smart contracts.
This is just a bad idea, and is never going to happen.
Sorry, Jesse.
But we should reject this and clear out cognitive load.

--- a/_specs/ecip-1063.md
+++ b/_specs/ecip-1063.md
@@ -4,7 +4,7 @@ ecip: 1063
 title: Ethereum Classic Integrated Decentralized Oracles and Smart Contracts
 author: Jesse Nguyen, <jessebaotruong@gmail.com>
 discussions-to: Community Discord #ecips
-status: Draft
+status: Rejected
 type: Standard Track
 created: 2019-07-21
 ---
