--- a/_specs/ecip-1072.md
+++ b/_specs/ecip-1072.md
@@ -2,7 +2,8 @@
 lang: en
 ecip: 1072
 title: Aztlán EVM and Protocol Upgrades (Yingchun Edition)
-status: Draft
+status: Last Call
+review-period-end: 2019-12-21
 type: Meta
 author: Wei Tang (@sorpaas), Talha Cross (@soc1c), Bob Summerwill (@bobsummerwill)
 created: 2019-11-14
