1061: add link to 1072

--- a/_specs/ecip-1061.md
+++ b/_specs/ecip-1061.md
@@ -16,7 +16,7 @@ Classic network without any gas-cost assumptions in a hard-fork code-named _Aztl
 maximum compatibility across these networks. 
 
 The _Yingchun_ Edition refers to the preferred variant of _Aztlán_ without any repricing of state-trie 
-dependent opcodes as previously proposed in ECIP-1072.
+dependent opcodes as previously proposed in [ECIP-1072](https://ecips.ethereumclassic.org/ECIPs/ecip-1072).
 
 ### Abstract
 
