1061: add review period end

--- a/_specs/ecip-1061.md
+++ b/_specs/ecip-1061.md
@@ -3,6 +3,7 @@ lang: en
 ecip: 1061
 title: Aztlán EVM and Protocol Upgrades (Yingchun Edition)
 status: Last Call
+review-period-end: 2019-12-19
 type: Meta
 author: Talha Cross (@soc1c), Wei Tang (@sorpaas)
 created: 2019-06-06
