--- a/_specs/ecip-1061.md
+++ b/_specs/ecip-1061.md
@@ -2,7 +2,7 @@
 lang: en
 ecip: 1061
 title: Aztlán EVM and Protocol Upgrades
-status: Draft
+status: Withdrawn
 type: Meta
 author: Talha Cross (@soc1c)
 created: 2019-06-06
