Another batch of ECIP author tag fix-ups so web display is clean.

--- a/_specs/ecip-1051.md
+++ b/_specs/ecip-1051.md
@@ -5,7 +5,7 @@ title: Ethereum Classic Treasury system
 status: Draft
 type: Standards Track
 category: Core
-Author: Dexaran, dexaran@ethereumclassic.org
+author: Dexaran (@dexaran)
 created: 2018-12-31
 ---
 
