--- a/_specs/ecip-1021.md
+++ b/_specs/ecip-1021.md
@@ -2,7 +2,7 @@
 lang: en
 ecip: 1021
 title: Token standard
-author: Dexaran, <dexaran820@gmail.com>
+Author: Dexaran (@dexaran)
 status: Draft
 type: Standards Track
 category: ECBP
