--- a/_specs/ecip-1049.md
+++ b/_specs/ecip-1049.md
@@ -6,7 +6,7 @@ status: Draft
 type: Standards Track
 category: Core
 discussions-to: https://github.com/ethereumclassic/ECIPs/issues/13
-author: Alexander Tsankov (alexander.tsankov@colorado.edu)
+author: Alexander Tsankov <alexander.tsankov@colorado.edu>
 created: 2019-01-08
 ---
 
