--- a/_specs/ecip-1000.md
+++ b/_specs/ecip-1000.md
@@ -110,7 +110,7 @@ ECIP editors are intended to fulfill administrative and editorial responsibiliti
 * Merge the pull request when it is ready.
 * List the ECIP in [[README.mediawiki]]
 
-### Corrdinating Steps
+### Coordinating Steps
 
 For important ECIP issues, core developers regularly hold meetings to gather rough consensus from the community. Those meetings may be conducted by ECIP editors, ECIP coordinators, or anyone else in the community who might be willing to volunteer. Coordinators of a meeting should:
 
