--- a/_specs/ecip-1072.md
+++ b/_specs/ecip-1072.md
@@ -2,10 +2,10 @@
 lang: en
 ecip: 1072
 title: Aztlán EVM and Protocol Upgrades (Yingchun Edition)
-status: Last Call
+status: Draft
 review-period-end: 2019-12-21
 type: Meta
-author: Wei Tang (@sorpaas), Talha Cross (@soc1c), Bob Summerwill (@bobsummerwill)
+author: Wei Tang (@sorpaas), Talha Cross (@soc1c)
 created: 2019-11-14
 discussions-to: https://github.com/ethereumclassic/ECIPs/issues/81
 license: Apache-2.0
