--- a/_specs/ecip-1073.md
+++ b/_specs/ecip-1073.md
@@ -2,7 +2,7 @@
 lang: en
 ecip: 1073
 title: Xichun EVM and Protocol Upgrades
-status: Draft
+status: Withdrawn
 type: Meta
 author: Wei Tang (@sorpaas)
 created: 2019-11-14
