Establish specification and process standards for Fork type ECIPs

--- a/_specs/ecip-1000.md
+++ b/_specs/ecip-1000.md
@@ -131,7 +131,7 @@ Each ECIP must begin with an RFC 822 style header preamble. The headers must app
 - **Comments-Summary:** (summary tone)
 - **Comments-URI:** (links to wiki page for comments)
 - **Status:** (Draft | Last Call | Accepted | Final | Deferred | Replaced | Rejected | Withdrawn)
-- **Type:** (Standards Track | Informational | Process)
+- **Type:** (Standards Track | Informational | Meta | Fork)
 - **Created:** (date created on, in ISO 8601 (yyyy-mm-dd) format)
 - **License:** (abbreviation for approved license(s))
 - **License-Code:** (abbreviation for code under different approved license(s))
@@ -150,7 +150,7 @@ If there are multiple authors, each should be on a separate line following RFC 2
 
 While an ECIP is in private discussions (usually during the initial Draft phase), a`Discussions-To` header will indicate the mailing list or URL where the ECIP is being discussed. No `Discussions-To` header is necessary if the ECIP is being discussed privately with the author.
 
-The `Type` header specifies the type of ECIP: Standards Track, Informational, or Process.
+The `Type` header specifies the type of ECIP: Standards Track, Informational, Meta, Fork.
 
 The `Created` header records the date that the ECIP was assigned a number.
 
@@ -172,6 +172,7 @@ There are three types of ECIP:
   - **Interface** - improvements around client [API/RPC] specifications and standards, and also certain language-level standards like method names  and contract ABIs.
   - **ECBP (Ethereum Classic Best Practice)** - application-level standards and conventions, including contract standards such as token standards, name registries, URI schemes, library/package formats, and wallet formats.
 - A **Meta ECIP** describes a **process** surrounding Ethereum Classic or proposes a change to (or an event in) a process. Process ECIPs are like Standard Track ECIPs, but apply to areas other than the Ethereum Classic protocol itself. They may propose an implementation, but not to Ethereum Classic's codebase; they often require community consensus; unlike Informational ECIPs, they are more than recommendations, and users are typically not free to ignore them. Examples include procedures, guidelines, changes to the decision-making process (e.g. this ECIP-1000 process document), and changes to the tools or environment used in Ethereum Classic development. *Any meta-ECIP is also considered a Process ECIP.*
+- A **Fork ECIP** describes a feature set and a block activation number for those features to become active on one or more blockchains.
 - An **Informational ECIP** describes an Ethereum Classic design issue, or provides general guidelines or information to the Ethereum Classic community, but does not propose a new feature. Informational ECIPs do not necessarily represent Ethereum Classic community consensus or a recommendation, so users and implementors are free to ignore Informational ECIPs or follow their advice.
 
 It is highly recommended that a single ECIP contain a single key proposal or new idea. The more focused the ECIP, the more successful it tends to be. A change to one client doesn't require an ECIP; a change that affects multiple clients, or defines a standard for multiple apps to use, does.
