Update TLDR section

--- a/_specs/ecip-1077.md
+++ b/_specs/ecip-1077.md
@@ -14,11 +14,11 @@ Establishing _Fork_ type ECIPs, and their standards and processes.
 
 #### TL;DR
 
-Make ECIPs with `Type` _Fork_ a thing. _Fork_ ECIPs should follow this process:
+Make ECIPs with `Type` _Fork_ a thing, where _Fork_ ECIPs should follow this process:
 - A "shell" Fork ECIP is opened, fitting the [template provided](TODO). This ECIP __does not initially include `Activation Block Number` or `Features` specifications__.
 - While in `WIP` or `Draft` status, one or more change sets are proposed against this document (eg. via Github Pull Requests) __modifying BOTH `Activation Block Number` and `Features` specifications__.
 - ... Stuff happens; there are comments, emails, meetings, bribes, blogs, bragging, trolling, haranguing, arguing, debating, pondering, editing, compromising, constructive criticiziing, etc...
-- One change set is merged to modify the Fork ECIP, yielding a COMPLETE and UNIQUE hard fork specification document.
+- One change set is merged to modify the Fork ECIP, yielding a COMPLETE and UNIQUE hard fork specification document, and status is moved to `Last Call`. By virtue of the process specification provided, a Fork ECIP achieving `Last Call` may not see `Draft` nor `WIP` status again (because doing so would require a merging a change set holding INCOMPLETE specification variables). 
 
 ### Definition
 
