Use 'IP' instead of 'ECIP'
This allows protocol upgrade specifications to be derived and/or defined
in any IP (Improvement Proposal) context, include ECIP, EIP, BIP, etc.

--- a/_specs/ecip-1077.md
+++ b/_specs/ecip-1077.md
@@ -22,7 +22,7 @@ Make ECIPs with `Type` _Fork_ a thing, where _Fork_ ECIPs should follow this pro
 
 ### Definition
 
-Fork ECIPs are defined as ECIPs specifying PROTOCOL ACTIVATION of any one or more Standards-Core track ECIP(s) at a specified activation block number.
+Fork ECIPs are defined as ECIPs specifying PROTOCOL ACTIVATION of any one or more Standards-Core track IP(s) at a specified activation block number.
 
 #### Standards
 
@@ -64,7 +64,7 @@ Related to and derivative of:
 
 ### Specification
 
-A Fork ECIP is defined as an ECIP specifying any (`n >= 1`) Standards-Core track ECIP or ECIP-set and a block activation number for this set. A Fork ECIP should be conceptually complete and unique (note that _Next hardfork_ suffices for the existing preference for ECIP uniqueness, since it is intended that there only be one at a time -- hopefully!).
+A Fork ECIP is defined as an ECIP specifying any (`n >= 1`) Standards-Core track IP or IP-set and a block activation number for this set. A Fork ECIP should be conceptually complete and unique (note that _Next hardfork_ suffices for the existing preference for ECIP uniqueness, since it is intended that there only be one at a time -- hopefully!).
 
 _Complete_ is defined as being fully and totally definitive; not lacking anything.
 
@@ -74,7 +74,7 @@ This proposal specifies that all Fork ECIPs in `Draft` state or earlier should c
 
 ### Rationale
 
-The sole purpose of a Fork ECIP is to join a block number (activation block) with a set of `n >= 1` Standards-Core type ECIPs containing protocol-facing changes. The document says "_These_ features will activate at _this_ moment."
+The sole purpose of a Fork ECIP is to join a block number (activation block) with a set of `n >= 1` Standards-Core type IPs containing protocol-facing changes. The document says "_These_ features will activate at _this_ moment."
 
 0. "Shell" format Fork ECIPs represent a clear, albeit abstract, idea: The blockchain's next hard fork.
 
