Clarify that @soc1c is a pesedo-anonymous ECIP editor

--- a/_specs/ecip-1000.md
+++ b/_specs/ecip-1000.md
@@ -75,8 +75,11 @@ The current ECIP editors are:
 * Wei Tang (@sorpaas)
 * Isaac Ardis (@meowsbits)
 * Cody Burns (@realcodywburns)
-* Afri Schoedon (@soc1c)
 * Yaz Khoury (@YazzyYaz)
+
+The following ECIP editors have decided to remain pesedo-anonymous, and we will only be refer to them using Github handles:
+
+* @soc1c
 
 ## ECIP Editor Responsibilities & Workflow
 
