--- a/_specs/ecip-1000.md
+++ b/_specs/ecip-1000.md
@@ -77,7 +77,7 @@ The current ECIP editors are:
 * Cody Burns (@realcodywburns)
 * Yaz Khoury (@YazzyYaz)
 
-The following ECIP editors have decided to remain pesedo-anonymous, and we will only be refer to them using Github handles:
+The following ECIP editors have decided to remain pesedo-anonymous, and we will only be referring to them using Github handles:
 
 * @soc1c
 
