--- a/_specs/ecip-1000.md
+++ b/_specs/ecip-1000.md
@@ -73,10 +73,13 @@ A good reason to transfer ownership is because the original author no longer has
 The current ECIP editors are:
 
 * Wei Tang (@sorpaas)
-* Isaac Ardis (@meowsbits)
 * Cody Burns (@realcodywburns)
-* Afri Schoedon (@soc1c)
 * Yaz Khoury (@YazzyYaz)
+
+The following ECIP editors have decided to remain pesedo-anonymous, and we will only be referring to them using Github handles:
+
+* @meowsbits
+* @soc1c
 
 ## ECIP Editor Responsibilities & Workflow
 
