--- a/_specs/ecip-1000.md
+++ b/_specs/ecip-1000.md
@@ -75,11 +75,8 @@ The current ECIP editors are:
 * Wei Tang (@sorpaas)
 * Cody Burns (@realcodywburns)
 * Yaz Khoury (@YazzyYaz)
-
-The following ECIP editors have decided to remain pesedo-anonymous, and we will only be referring to them using Github handles:
-
-* @meowsbits
-* @soc1c
+* @soc1c (Anonymous)
+* @meowsbits (Anonymous)
 
 ## ECIP Editor Responsibilities & Workflow
 
