--- a/_specs/ecip-1000.md
+++ b/_specs/ecip-1000.md
@@ -75,8 +75,8 @@ The current ECIP editors are:
 * Wei Tang (@sorpaas)
 * Cody Burns (@realcodywburns)
 * Yaz Khoury (@YazzyYaz)
-* @soc1c (Anonymous)
-* @meowsbits (Anonymous)
+* @soc1c (Pseudonymous)
+* @meowsbits (Pseudonymous)
 
 ## ECIP Editor Responsibilities & Workflow
 
