WIP: Add reasoning for deviation, TODO.

--- a/_specs/ecip-1000.md
+++ b/_specs/ecip-1000.md
@@ -357,7 +357,7 @@ In addition, it is recommended that literal code included in the ECIP be dual-li
 
 As a decentralized community, it is important that for all governance actions, especially in ECIP, the established process is followed. In this section, we document irregular process transitions, and give special permissions to them, in order to establish them _ex post facto_ as following procedure. Note that this is essentially similar to theDAO hard fork in Ethereum, and should only be added in extreme cases.
 
-* [Pull Request #199](https://github.com/ethereumclassic/ECIPs/blob/gh/.gh-pullrequests/00199.json) was [merged](https://github.com/ethereumclassic/ECIPs/blob/gh/.gh-pullrequests/00199_event_2837817387.json), [moving it's associated ECIP to `Last Call` status](https://github.com/ethereumclassic/ECIPs/blob/gh/.gh-pullrequests/00199.patch#L21) after [dismissing](https://github.com/ethereumclassic/ECIPs/blob/gh/.gh-pullrequests/00199_event_2837816513.json) a [review](https://github.com/ethereumclassic/ECIPs/blob/gh/.gh-pullrequests/00199_review_323755348.json) which [provided a reasonable objection](https://github.com/ethereumclassic/ECIPs/blob/gh/.gh-pullrequests/00199_review_323755348.json#L24).
+* [Pull Request #199](https://github.com/ethereumclassic/ECIPs/blob/gh/.gh-pullrequests/00199.json) was [merged](https://github.com/ethereumclassic/ECIPs/blob/gh/.gh-pullrequests/00199_event_2837817387.json), [moving it's associated ECIP to `Last Call` status](https://github.com/ethereumclassic/ECIPs/blob/gh/.gh-pullrequests/00199.patch#L21) after [dismissing](https://github.com/ethereumclassic/ECIPs/blob/gh/.gh-pullrequests/00199_event_2837816513.json) a [review](https://github.com/ethereumclassic/ECIPs/blob/gh/.gh-pullrequests/00199_review_323755348.json) which [provided a reasonable objection](https://github.com/ethereumclassic/ECIPs/blob/gh/.gh-pullrequests/00199_review_323755348.json#L24). This constituted a process deviating from the then-established [procedural specification](TODO).
 
 # See Also
 
