--- a/_specs/ecip-1000.md
+++ b/_specs/ecip-1000.md
@@ -77,6 +77,7 @@ The current ECIP editors are:
 * Cody Burns (@realcodywburns)
 * Afri Schoedon (@soc1c)
 * Yaz Khoury (@YazzyYaz)
+* Zachary Belford (@BelfordZ)
 
 ## ECIP Editor Responsibilities & Workflow
 
