--- a/_specs/ecip-1067.md
+++ b/_specs/ecip-1067.md
@@ -2,7 +2,7 @@
 lang: en
 ecip: 1067
 title: Standardize OS Level Management of Signature Handling ("invoke-signer")
-status: Draft
+status: REJECTED
 type: Interface
 discussions-to: https://github.com/ethereumclassic/ECIPs/issues/147
 author: Zac Mitton (@zmitton)
@@ -93,16 +93,8 @@ Most users will have a favorite mobile signer and enjoy a consistent experience 
 #### Developer Experience
 It becomes much easier to add a single "ethereum feature" into any software application. The app dev does not need to worry about any of the details of building a wallet/signer. They just create a string to be signed, and invoke the user's signer with it. The user expectation is only that they have _a_ signer, as opposed to some specific signer.
 
-<!-- Leaving the rpc call embedded, allows developers to continue to use existing tools for formating and decoding transactions and signatures. Using query string format for arbitrary variables will also allow experimentation with new features that can be ignored by non-supporting wallets. For instance, I'd like wallets to eventually be sent the `contractCode` and `compilerVerion` so they can verify the code and ABI. But I would not like to define any of that into the spec right now. Over time we can standardize certain variable names. -->
+---
 
-<!-- Supporting Links:
+### Rejection Notice:
 
-[ECIP 1037 -- Simple Non-Interactive URI Scheme](https://github.com/ethereumproject/ECIPs/pull/81)
-
-[EIP 67 -- Standard URI scheme with metadata value and byte code](https://github.com/ethereum/EIPs/issues/67)
-
-[EIP 681 -- Payment request URL specification](https://github.com/ethereum/EIPs/pull/681)
-
-[EIP 831 -- Standard URL Format](https://github.com/ethereum/EIPs/pull/831)
-
-[URI Schemes](https://www.iana.org/assignments/uri-schemes/uri-schemes.xhtml) -->
+This approach currently has a flaw that the name of the caller application is not sent to the invoked wallet, so handing control back to the caller app is very difficult. This can be worked around in an app-to-app setting (by passing it as part of the payload), but not in a browser-to-app setting (without complicated "browser sniffing" techniques).  
