--- a/_specs/ecip-1067.md
+++ b/_specs/ecip-1067.md
@@ -95,6 +95,6 @@ It becomes much easier to add a single "ethereum feature" into any software appl
 
 ---
 
-### Rejection Notice:
+### Withdrawal Notice:
 
 This approach currently has a flaw that the name of the caller application is not sent to the invoked wallet, so handing control back to the caller app is very difficult. This can be worked around in an app-to-app setting (by passing it as part of the payload), but not in a browser-to-app setting (without complicated "browser sniffing" techniques).  
