--- a/_specs/ecip-1067.md
+++ b/_specs/ecip-1067.md
@@ -2,7 +2,7 @@
 lang: en
 ecip: 1067
 title: Standardize OS Level Management of Signature Handling ("invoke-signer")
-status: REJECTED
+status: Withdrawn
 type: Interface
 discussions-to: https://github.com/ethereumclassic/ECIPs/issues/147
 author: Zac Mitton (@zmitton)
