feat: Update from Last Call to Accepted for Agharta

--- a/_specs/ecip-1056.md
+++ b/_specs/ecip-1056.md
@@ -2,8 +2,7 @@
 lang: en
 ecip: 1056
 title: Agharta EVM and Protocol Upgrades
-status: Last Call
-review-period-end: 2019-12-19
+status: Accepted
 type: Meta
 author: Isaac Ardis <isaac.a@etclabs.org>, Wei Tang <hi@that.world>
 discussions-to: https://github.com/ethereumclassic/ECIPs/issues/131
