--- a/_specs/ecip-1061.md
+++ b/_specs/ecip-1061.md
@@ -2,8 +2,7 @@
 lang: en
 ecip: 1061
 title: Aztlán EVM and Protocol Upgrades (Yingchun Edition)
-status: Last Call
-review-period-end: 2019-12-19
+status: Accepted
 type: Meta
 author: Talha Cross (@soc1c), Wei Tang (@sorpaas)
 created: 2019-06-06
@@ -34,7 +33,7 @@ This document proposes the following blocks at which to implement these changes 
 
 - `778_507` on Mordor Classic PoW-testnet (Feb 5th, 2020)
 - `2_058_191` on Kotti Classic PoA-testnet (Feb 12th, 2020)
-- `TBD` on Ethereum Classic PoW-mainnet (March 25th, 2020)
+- `10_500_839` on Ethereum Classic PoW-mainnet (March 25th, 2020)
 
 For more information on the opcodes and their respective EIPs and implementations, please see the _Specification_
 section of this document.
