Allow authors to move ECIPs from Accepted to Draft if flaws in the specification are discovered prior to inclusion in a hardfork.

--- a/_specs/ecip-1000.md
+++ b/_specs/ecip-1000.md
@@ -197,6 +197,16 @@ ECIPs should be changed from `Draft` or `Last Call` status, to `Rejected`, upon 
 
 An `Accepted` ECIP may progress to `Final` only when specific criteria reflecting real-world adoption has occurred. This is different for each ECIP depending on the nature of its proposed changes, which will be expanded on below. Evaluation of this status change should be **objectively verifiable**, and/or be discussed on the development calls, Discord channel, other groups or the mailing list.
 
+An `Accepted` ECIP may be changed back to `Draft` if flaws in the
+specification are discovered and it needs to be reworked.  This differs
+from moving from `Accepted` to `Rejected` because in this scenario it
+is the details of the proposal which need changing, not the overall
+intention of the proposal.  We are fallible humans and sometimes we
+get the details wrong and need to correct our proposals.  We hope to
+get things correct prior to moving any proposal to `Accepted`, but we
+may not always achieve that target.  This "path" is a recognition of
+that reality.
+
 When a `Final` ECIP is no longer relevant, its status may be changed to `Replaced`. This change must also be **objectively verifiable** and/or discussed.
 
 Some Informational ECIPs, which are considered process ECIPs, may also be moved to a status of `Active` instead of `Final` if they are never meant to be completed, e.g. this [ECIP-1000.](./ecip-1000.md)
