move agharta to final

--- a/_specs/ecip-1056.md
+++ b/_specs/ecip-1056.md
@@ -2,7 +2,7 @@
 lang: en
 ecip: 1056
 title: Agharta EVM and Protocol Upgrades
-status: Accepted
+status: Final
 type: Meta
 author: Isaac Ardis <isaac.a@etclabs.org>, Wei Tang <hi@that.world>
 discussions-to: https://github.com/ethereumclassic/ECIPs/issues/131
