Sorpaas assigned ECIP-1078 number to this proposal.

--- a/_specs/ecip-1078.md
+++ b/_specs/ecip-1078.md
@@ -1,6 +1,6 @@
 ---
 lang: en
-ecip: Unassigned
+ecip: 1078
 title: Phoenix EVM and Protocol Upgrades
 author: Bob Summerwill (@bobsummerwill)
 status: Draft
