Sorpaas assigned ECIP-1079 to this ECIP and ECIP-1080 to self-balance. Update links appropriately.

--- a/_specs/ecip-1079.md
+++ b/_specs/ecip-1079.md
@@ -1,6 +1,6 @@
 ---
 lang: en
-ecip: Unassigned
+ecip: 1079
 title: Phoenix EVM and Protocol Upgrades
 author: Bob Summerwill (@bobsummerwill)
 status: Draft
@@ -68,7 +68,7 @@ After HARD_FORK_BLOCK, apply the following changes.
 - Enable [EIP-1344](https://eips.ethereum.org/EIPS/eip-1344)
 - Enable [EIP-2028](https://eips.ethereum.org/EIPS/eip-2028)
 - Enable [EIP-1283](https://eips.ethereum.org/EIPS/eip-1283) with [EIP-1706](https://eips.ethereum.org/EIPS/eip-1706).
-- Enable [SELFBALANCE opcode](https://github.com/ethereumclassic/ECIPs/issues/266)
+- Enable [ECIP-1080](https://github.com/ethereumclassic/ECIPs/issues/266)
 
 
 ### Rationale
@@ -112,8 +112,7 @@ The following clients with Ethereum Classic support implement the _Istanbul_ fea
 The author is unaware if any of these clients have implemented [EIP-1706](https://eips.ethereum.org/EIPS/eip-1706), but it is a very simple change, analogous to [EIP-2200](https://eips.ethereum.org/EIPS/eip-2200), which all the
 codebases have already implemented.
 
-Similarly [50-SELFBALANCE](https://specs.corepaper.org/50-selfbalance) has not been implemented in any of these
-codebases, but is just a "remix" of code which they have already implemented.
+Similarly [ECIP-1080](https://github.com/ethereumclassic/ECIPs/issues/266) has not been implemented in any of these codebases, but is just a "remix" of code which they have already implemented.
 
 
 ## Copyright
