Remove doxing of ECIP Editors. Both soc1c and meowbits have made crystal clear that they do not want their real names in ECIP-1000.

--- a/_specs/ecip-1000.md
+++ b/_specs/ecip-1000.md
@@ -73,9 +73,9 @@ A good reason to transfer ownership is because the original author no longer has
 The current ECIP editors are:
 
 * Wei Tang (@sorpaas)
-* Isaac Ardis (@meowsbits)
+* Mr. Meows D. Bits (@meowsbits)
 * Cody Burns (@realcodywburns)
-* Afri Schoedon (@soc1c)
+* Talha Cross (@soc1c)
 * Yaz Khoury (@YazzyYaz)
 * Zachary Belford (@BelfordZ)
 
