Fix malformed metadata for ECIP-1052.

--- a/_specs/ecip-1052.md
+++ b/_specs/ecip-1052.md
@@ -4,7 +4,7 @@ ecip: 1052
 title: Smart-contract Security Auditing core
 status: Draft
 type: Meta
-author: Dexaran, dexaran@ethereumclassic.org
+author: Dexaran <dexaran@ethereumclassic.org>
 created: 2018-12-31
 ---
 
