--- a/_specs/ecip-1019.md
+++ b/_specs/ecip-1019.md
@@ -3,13 +3,23 @@ lang: en
 ecip: 1019
 title: (Epoch Decay 10) Monetary Policy and Final Modification to the Ethereum Classic Emission Schedule
 author: Mike Boremi <ecip-1019@mikes.email>
-status: Draft
+status: Replaced
 type: Standards Track
 category: Core
 created: 2017-01-19
 ---
 
+###  NOTE
+
+The ECIP was replaced by [ECIP-1017](https://ecips.ethereumclassic.org/ECIPs/ecip-1017) and
+[ECIP-1039](https://ecips.ethereumclassic.org/ECIPs/ecip-1039) which fixed a rounding error in the
+ECIP-1017 specification.  This ECIP was never activated.
+
+Both of the other ECIPs were activated at [block 5,000,000](https://blockscout.com/etc/mainnet/blocks/5000000/transactions) on the ETC mainnet on 11th December 2017.  This ECIP is being retained for historical purposes.
+
+
 ###  Abstract
+
 
 This ECIP proposes a solution to the Ethereum Classic Monetary Policy to adjust, with absolute finality, the current emission schedule implementation of 14.0625ETC per block in perpetuity. The solution proposed introduces a hard limit upper bound on the maximum absolute number of ETC and introduces a method of degraded emission over time.  This occurs in such a way there is a constant decay in miner/uncle reward every epoch until reaching 0, where gas fees are the sole source of reward. This proposal does not include any solution to changes in protocol introducing PoS or other block forging scheme.
 
