Added copyright and sourcing for Core Paper to Copyright section in addition to attestation and thanks higher up.

--- a/_specs/ecip-1079.md
+++ b/_specs/ecip-1079.md
@@ -120,3 +120,9 @@ Similarly [ECIP-1080](https://github.com/ethereumclassic/ECIPs/issues/266) has n
 This work is licensed under the [Apache License, Version 2.0](https://www.apache.org/licenses/LICENSE-2.0).  The author, Bob Summerwill, attests to his sole authorship of this work, and that he is able to contribute this work to the ECIP process under the Apache 2.0 licence.
 
 He further attests that he neither holds nor is aware of any patents, trademarks, copyright issues or other IP hinderances associated with this work.
+
+Core Paper
+Copyright 2019-2020 Wei Tang
+
+This product includes specifications developed at
+The Core Paper project (https://corepaper.org/).
