--- a/_specs/ecip-1080.md
+++ b/_specs/ecip-1080.md
@@ -67,12 +67,12 @@ not in this standalone form yet.  The work to support standalone would be minima
 
 ## Copyright
 
-This work is licensed under the [Apache License, Version 2.0](https://www.apache.org/licenses/LICENSE-2.0).  The author, Bob Summerwill, attests to his sole authorship of this work, and that he is able to contribute this work to the ECIP process under the Apache 2.0 licence.
+This proposal is licensed under the [Apache License, Version 2.0](https://www.apache.org/licenses/LICENSE-2.0),
+based on specifications developed by Wei Tang within the Core Paper project (https://corepaper.org/).
 
-He further attests that he neither holds nor is aware of any patents, trademarks, copyright issues or other IP hinderances associated with this work.
+Core Paper Copyright 2019-2020 Wei Tang.
 
-Core Paper
-Copyright 2019-2020 Wei Tang
-
-This product includes specifications developed at
-The Core Paper project (https://corepaper.org/).
+Bob Summerwill, the author of this proposal attests that his is the sole author of this specific document
+based on Wei Tang's work and that he is able to contribute this work to the ECIP process under the
+Apache 2.0 licence.  He further attests that he neither holds nor is aware of any patents, trademarks,
+copyright issues or other IP hinderances associated with this work.
