phoenix: aztlan as vanilla istanbul

--- a/_specs/ecip-1061.md
+++ b/_specs/ecip-1061.md
@@ -1,8 +1,9 @@
 ---
 lang: en
 ecip: 1061
-title: Aztlán EVM and Protocol Upgrades (Yingchun Edition)
-status: Accepted
+title: Aztlán EVM and Protocol Upgrades (Phoenix Edition)
+status: Last Call
+review-period-end: 2020-02-12
 type: Meta
 author: Talha Cross (@soc1c), Wei Tang (@sorpaas)
 created: 2019-06-06
@@ -12,11 +13,7 @@ discussions-to: https://github.com/ethereumclassic/ECIPs/issues/81
 ### Simple Summary
 
 Enable the outstanding Ethereum Foundation _Istanbul_ network protocol upgrades on the Ethereum
-Classic network without any gas-cost assumptions in a hard-fork code-named _Aztlán (Yingchun Edition)_ to enable 
-maximum compatibility across these networks. 
-
-The _Yingchun_ Edition refers to the preferred variant of _Aztlán_ without any repricing of state-trie 
-dependent opcodes as previously proposed in [ECIP-1072](https://ecips.ethereumclassic.org/ECIPs/ecip-1072).
+Classic network in a hard-fork code-named _Aztlán_ to enable maximum compatibility across these networks.
 
 ### Abstract
 
@@ -50,6 +47,7 @@ Technical specifications for each EIP can be found at those documents respective
 - [EIP-152](https://eips.ethereum.org/EIPS/eip-152): Add Blake2 compression function `F` precompile
 - [EIP-1108](https://eips.ethereum.org/EIPS/eip-1108): Reduce alt_bn128 precompile gas costs
 - [EIP-1344](https://eips.ethereum.org/EIPS/eip-1344): Add ChainID opcode
+- [EIP-1884](https://eips.ethereum.org/EIPS/eip-1884): Repricing for trie-size-dependent opcodes
 - [EIP-2028](https://eips.ethereum.org/EIPS/eip-2028): Calldata gas cost reduction
 - [EIP-2200](https://eips.ethereum.org/EIPS/eip-2200): Rebalance net-metered SSTORE gas cost with consideration of SLOAD gas cost change
 
@@ -62,8 +60,7 @@ Görli and Kotti).
 __Immutability__: None of the introduced new opcodes in the EVM has the potential to change the behavior of existing
 contracts; in the case where previously an arbitrary invalid bytecode would have been deployed to the network, none of
 them would be able to modify the state of the Ethereum Classic networks retrospectively. Adding opcodes to the EVM
-increases its functionality and should be considered a feature upgrade rather than a modification. In particular, a delay
-of Istanbul's EIP-1884 activation should be considered until backward-compatibility solutions are in place on Ethereum Classic.
+increases its functionality and should be considered a feature upgrade rather than a modification.
 
 ### Implementation
 
