Update and rename ecip-do_not_dox.md to ecip-1081.md

--- a/_specs/ecip-1081.md
+++ b/_specs/ecip-1081.md
@@ -1,6 +1,6 @@
 ---
 lang: en
-ecip: **Please assign a number here and on the ECIP URL <-**
+ecip: 1081
 title: Do Not Dox ECIP Editors
 author: Bob Summerwill (@bobsummerwill)
 status: Draft
