Update and rename ecip-_.md to ecip-1082.md

--- a/_specs/ecip-1082.md
+++ b/_specs/ecip-1082.md
@@ -1,5 +1,5 @@
 ---
-ecip: TBD
+ecip: 1082
 title: Fork identifier (`forkid`) protocol fork list specification
 author: @meowsbits
 discussions-to: TBD
