Update and rename ecip-draft_remove_170.md to ecip-1083.md

--- a/_specs/ecip-1083.md
+++ b/_specs/ecip-1083.md
@@ -1,5 +1,5 @@
 ---
-ecip: <ECIP number>
+ecip: 1083
 title: Remove Contract Size Limit
 author: Zachary Belford <@BelfordZ>, Mudit Gupta <@maxsam4>
 discussions-to: https://github.com/ethereum/EIPs/issues/1662
