Update and rename ecip-hard-cap-gaslimit-in-protocol.md to ecip-1084.md

--- a/_specs/ecip-1084.md
+++ b/_specs/ecip-1084.md
@@ -1,6 +1,6 @@
 ---
 lang: en
-ecip: Unassigned
+ecip: 1084
 title: Hard-cap gas-limit in protocol
 author: Bob Summerwill (@bobsummerwill)
 status: Draft
