Move ECIP-1078 ("fix") to Last Call. Move ECIP-1079 ("redo") to Withdrawn. Aztlán has activated on the Mordor testnet, so can no longer be withdrawn. Proceeding with "fix" appears to be our best option.

--- a/_specs/ecip-1079.md
+++ b/_specs/ecip-1079.md
@@ -1,14 +1,31 @@
 ---
 lang: en
 ecip: 1079
-title: Phoenix EVM and Protocol Upgrades
+title: Phoenix EVM and Protocol Upgrades ("Aztlán redo")
 author: Bob Summerwill (@bobsummerwill)
-status: Draft
+status: Withdrawn
 type: Meta
 created: 2020-01-19
 license: Apache-2.0
 discussions-to: https://github.com/ethereumclassic/ECIPs/issues/263
 ---
+
+###  NOTE
+
+This ECIP was rendered unworkable when
+[ECIP 1061: Aztlán EVM and Protocol Upgrades (Yingchun Edition)](https://ecips.ethereumclassic.org/ECIPs/ecip-1061)
+was activated to the Mordor testnet.  It was no longer possible for the original Aztlán
+hardfork to be Withdrawn and replaced with this ECIP.
+
+The most likely path forward at the time of writing is for 
+[ECIP 1078: Phoenix EVM and Protocol Upgrades ("Aztlán redo")](https://ecips.ethereumclassic.org/ECIPs/ecip-1061)
+to be moved to Last Call and to have block numbers assigned and to proceed with activation on
+Mordor and Kotti testnets slightly later than the Aztlán activation but activating on the same
+block for ETC mainnet.
+
+There will be a [Core Devs Call: ECIP-1078 Phoenix Upgrade](https://github.com/ethereumclassic/ECIPs/issues/284)
+on Wednesday, February 05, 2019, 4pm UTC, 60 minutes max to make the final decision on this.
+
 
 ### Simple Summary
 
