--- a/_specs/ecip-1078.md
+++ b/_specs/ecip-1078.md
@@ -1,9 +1,9 @@
 ---
 lang: en
 ecip: 1078
-title: Phoenix EVM and Protocol Upgrades
+title: Phoenix EVM and Protocol Upgrades ("Aztlán fix")
 author: Bob Summerwill (@bobsummerwill)
-status: Draft
+status: Last Call
 type: Meta
 created: 2020-01-19
 license: Apache-2.0
@@ -12,7 +12,7 @@ discussions-to: https://github.com/ethereumclassic/ECIPs/issues/262
 
 ### Simple Summary
 
-This ECIP describes a hard-fork which would occur at the same block as
+This ECIP describes a hard-fork which would occur at the same mainnet block as
 [ECIP 1061: Aztlán EVM and Protocol Upgrades (Yingchun Edition)](https://ecips.ethereumclassic.org/ECIPs/ecip-1061) to "fix" two issues with ECIP-1061 where the written specification
 did not match the original intent.
 
@@ -38,8 +38,8 @@ would result in protocol changes which met the original intent.
 
 This document proposes the following blocks at which to implement these changes in the Classic networks:
 
-- `778_507` on Mordor Classic PoW-testnet (Feb 5th, 2020)
-- `2_058_191` on Kotti Classic PoA-testnet (Feb 12th, 2020)
+- TBD on Mordor Classic PoW-testnet (TBD)
+- TBD on Kotti Classic PoA-testnet (TBD)
 - `10_500_839` on Ethereum Classic PoW-mainnet (March 25th, 2020)
 
 At HARD_FORK_BLOCK, apply the following changes:
