Update and rename ecip-simple-subroutines.md to ecip-1085.md

--- a/_specs/ecip-1085.md
+++ b/_specs/ecip-1085.md
@@ -1,6 +1,6 @@
 ---
 lang: en
-ecip: TBD
+ecip: 1085
 title: Simple Subroutines for the EVM
 author: Greg Colvin (@gcolvin) and Bob Summerwill (@bobsummerwill)
 status: Draft
