Set a review end date for Phoenix HF which is 8 weeks from today. Set block times for Mordor and Kotti as suggested by soc1c. Block for ETC mainnet activation is still TBD, but estimated as April/May/June. This means that Azltan+Phoenix is DELAYED from the earlier estimated 25th March 2020 target. The reason for the delay is a mixture of the unpredictability of block mining (estimate was made back in October) and the need for more time given the misspecification which let to the need for the Phoenix HF.

--- a/_specs/ecip-1078.md
+++ b/_specs/ecip-1078.md
@@ -4,6 +4,7 @@ ecip: 1078
 title: Phoenix EVM and Protocol Upgrades ("Aztlán fix")
 author: Bob Summerwill (@bobsummerwill)
 status: Last Call
+review-period-end: 2020-03-30
 type: Meta
 created: 2020-01-19
 license: Apache-2.0
@@ -38,9 +39,9 @@ would result in protocol changes which met the original intent.
 
 This document proposes the following blocks at which to implement these changes in the Classic networks:
 
-- TBD on Mordor Classic PoW-testnet (TBD)
-- TBD on Kotti Classic PoA-testnet (TBD)
-- `10_500_839` on Ethereum Classic PoW-mainnet (March 25th, 2020)
+- `976_231` on Mordor Classic PoW-testnet (March 4th, 2020)
+- `2_208_203` on Kotti Classic PoA-testnet (March 11st, 2020)
+- TBD on Ethereum Classic PoW-mainnet (April/May/June 2020)
 
 At HARD_FORK_BLOCK, apply the following changes:
 
