--- a/_specs/ECIP-0001.md
+++ b/_specs/ECIP-0001.md
@@ -189,7 +189,7 @@ An ECIP must meet certain minimum criteria. It must be a clear and complete desc
 
 ### Specification
 
-The typical paths of the status of successful ECIP types are as follows:
+The typical status lifecycles of successful ECIP types, from pull requests to merged and fully processed or implemented, are as follows:
 
 For Standard Track ECIPs: 
 
@@ -219,7 +219,7 @@ When a `Final` ECIP is no longer relevant, its status may be changed to `Replace
 
 Some Informational ECIPs, which are considered process ECIPs, may also be moved to a status of `Active` instead of `Final` if they are never meant to be completed, e.g. this [ECIP-1000.](./ecip-1000.md)
 
-`Draft` ECIPs which may be in a very early stage may be entered as `WIP` ECIPs, which means they are a work in progress.
+`Draft` ECIPs which may be in a very early stage may be entered as `WIP` pull requests, which means they are a work in progress. However, `WIP` ECIP pull requests may not be merged into the ECIP repository unless authors feel confident enough about their proposals and moved them to `Draft` status. 
 
 A process ECIP may change status from `Draft` to `Final` when it achieves rough consensus on the discussion process. Such a proposal is said to have rough consensus if it has been open to discussion on the development calls, Discord channel, other groups or the mailing list for at least one month, and no person maintains any unaddressed substantiated objections to it. Addressed or obstructive objections may be ignored/overruled by general agreement that they have been sufficiently addressed, but clear reasoning must be given in such circumstances.
 
