Using "approx" prefix to make clear that future dates are an approximate estimation. Meowbits suggested we remove the dates entirely, but I do not think that is a good idea. Humans do not think in blocks. However inaccurate these dates might be, humans like to make plans and that requires dates.

--- a/_specs/ecip-1078.md
+++ b/_specs/ecip-1078.md
@@ -39,9 +39,9 @@ would result in protocol changes which met the original intent.
 
 This document proposes the following blocks at which to implement these changes in the Classic networks:
 
-- `976_231` on Mordor Classic PoW-testnet (~March 4th, 2020)
-- `2_208_203` on Kotti Classic PoA-testnet (~March 11st, 2020)
-- `10_500_839` on Ethereum Classic PoW-mainnet (~May/June, 2020)
+- `976_231` on Mordor Classic PoW-testnet (approx March 4th, 2020)
+- `2_208_203` on Kotti Classic PoA-testnet (approx March 11st, 2020)
+- `10_500_839` on Ethereum Classic PoW-mainnet (approx June 10th, 2020)
 
 At HARD_FORK_BLOCK, apply the following changes:
 
