--- a/_specs/ecip-1061.md
+++ b/_specs/ecip-1061.md
@@ -32,8 +32,8 @@ _Istanbul_ hardforks. The proposed changes for Ethereum Classic's _Aztlán_ upgr
 This document proposes the following blocks at which to implement these changes in the Classic networks:
 
 - `778_507` on Mordor Classic PoW-testnet (activated on Jan 30th, 2020)
-- `2_058_191` on Kotti Classic PoA-testnet (~Feb 14th, 2020)
-- `10_500_839` on Ethereum Classic PoW-mainnet (~May/June, 2020)
+- `2_058_191` on Kotti Classic PoA-testnet (approx Feb 12th, 2020)
+- `10_500_839` on Ethereum Classic PoW-mainnet (approx Jun 10th, 2020)
 
 For more information on the opcodes and their respective EIPs and implementations, please see the _Specification_
 section of this document.
