fix: change wip to draft

--- a/_specs/ecip-1083.md
+++ b/_specs/ecip-1083.md
@@ -3,7 +3,7 @@ ecip: 1083
 title: Remove Contract Size Limit
 author: Zachary Belford <@BelfordZ>, Mudit Gupta <@maxsam4>
 discussions-to: https://github.com/ethereum/EIPs/issues/1662
-status: WIP
+status: Draft
 type: Standards Track (Core)
 created: 2019-12-20
 ---
