ECIP-1082: fix catergory

--- a/_specs/ecip-1082.md
+++ b/_specs/ecip-1082.md
@@ -4,7 +4,8 @@ title: Fork identifier (`forkid`) protocol fork list specification
 author: @meowsbits
 discussions-to: TBD
 status: Draft
-type: Standards Track Core
+type: Standards Track
+category: Core
 created: 2019-12-18
 ---
 
