state(1082): move status to Last Call
Signed-off-by: meows <b5c6@protonmail.com>

--- a/_specs/ecip-1082.md
+++ b/_specs/ecip-1082.md
@@ -2,8 +2,7 @@
 ecip: 1082
 title: Fork identifier (`forkid`) protocol fork list specification
 author: @meowsbits
-discussions-to: TBD
-status: Draft
+status: Last Call
 type: Standards Track
 category: Core
 created: 2019-12-18
