fix(1082): category is most precisely Networking
Signed-off-by: meows <b5c6@protonmail.com>

--- a/_specs/ecip-1082.md
+++ b/_specs/ecip-1082.md
@@ -5,7 +5,7 @@ title: Fork identifier (`forkid`) protocol fork list specification
 author: @meowsbits
 status: Last Call
 type: Standards Track
-category: Core
+category: Networking
 created: 2019-12-18
 ---
 
