ECIP-1086: add link to besu implementation

--- a/_specs/ecip-1086.md
+++ b/_specs/ecip-1086.md
@@ -60,6 +60,8 @@ Note, that accepting and merging these pull requests would either require to rol
 
 Adoption of the content of this ECIP requires a configuration for all clients to allow for configuring `SLOAD_GAS` as per [ECIP-1086](https://ecips.ethereumclassic.org/ECIPs/ecip-1086). The implementation cost is considered low.
 
+A sample implementation is available for _Besu_: [hyperledger/besu#382](https://github.com/hyperledger/besu/pull/382)
+
 ## Copyright
 
 Copyright and related rights waived via [CC0](https://creativecommons.org/publicdomain/zero/1.0/).
