ECIP-1082: add license and discussions-to header tags
Signed-off-by: meows <b5c6@protonmail.com>

--- a/_specs/ecip-1082.md
+++ b/_specs/ecip-1082.md
@@ -5,8 +5,10 @@ title: Fork identifier (`forkid`) protocol fork list specification
 author: @meowsbits
 status: Last Call
 type: Standards Track
+discussions-to: https://github.com/ethereumclassic/ECIPs/issues/294
 category: Networking
 created: 2019-12-18
+license: Apache-2.0
 ---
 
 ### Abstract
