--- a/_specs/ecip-1086.md
+++ b/_specs/ecip-1086.md
@@ -60,7 +60,11 @@ Note, that accepting and merging these pull requests would either require to rol
 
 Adoption of the content of this ECIP requires a configuration for all clients to allow for configuring `SLOAD_GAS` as per [ECIP-1086](https://ecips.ethereumclassic.org/ECIPs/ecip-1086). The implementation cost is considered low.
 
-A sample implementation is available for _Besu_: [hyperledger/besu#382](https://github.com/hyperledger/besu/pull/382)
+An implementation is available for:
+
+* Hyperledger Besu: [hyperledger/besu#382](https://github.com/hyperledger/besu/pull/382)
+* Parity Ethereum: `N/A`
+* Multi-Geth: [etclabscore/multi-geth#151](https://github.com/etclabscore/multi-geth/pull/151)
 
 ## Copyright
 
