draft(ECIP1087): improve abstract
Signed-off-by: meows <b5c6@protonmail.com>

--- a/_specs/ecip-1087.md
+++ b/_specs/ecip-1087.md
@@ -12,7 +12,7 @@ license: Apache-2.0
 
 Don't touch Kotti; allow ECIP1061, ECIP1078, and ECIP1086 (EIP2200, EIP2200Disable) to continue as specified and implemented there.
 
-Rollback Mordor to 750000 (3507 blocks prior to ECIP1061 activation), with ECIP1078 activation at block 778507 (same as ECIP1061).
+Set Mordor ECIP1078 activation to 778507 (equivalent to ECIP1061), and rollback to 750000.
 
 ### Motivation
 
