draft(ECIP1087): note that eip2200 won't event actually be enabled on etc mainnet
Signed-off-by: meows <b5c6@protonmail.com>

--- a/_specs/ecip-1087.md
+++ b/_specs/ecip-1087.md
@@ -30,7 +30,7 @@ EIP2200 has since been (simply) corrected (in all impacted providers AFAIK).
 ECIP1061 and ECIP1078 have equal activation block numbers on mainnet (10_500_839).
 But ECIP1061 has already been activated on testnets, while ECIP1078, with a later testnet activation, is not yet enabled on the testnets.
 
-This means that an incorrect implementation of EIP2200 is live on testnets.
+This means that an incorrect (and mainnet irrelevant) implementation of EIP2200 is live on testnets.
 This means that protocol providers publishing releases which include ECIP1078 for testnets are faced with a dilemma:
 
 - Don't correct EIP2200 before the testnets ECIP1078 fork.
