Add EIP-1283 to ECIP-1089

--- a/_specs/ecip-1089.md
+++ b/_specs/ecip-1089.md
@@ -21,6 +21,7 @@ Add support for a subset of protocol-impacting changes introduced in the Ethereu
 
 - Add Blake2 compression function `F` precompile
 - Reduce alt_bn128 precompile gas costs
+- Net gas metering for SSTORE without dirty maps
 - Add ChainID opcode
 - Disable SSTORE with gasleft lower than call stipend
 - Calldata gas cost reduction
@@ -44,6 +45,7 @@ Technical specifications for each EIP can be found at those documents respective
 
 - [EIP-152](https://eips.ethereum.org/EIPS/eip-152): Add Blake2 compression function `F` precompile
 - [EIP-1108](https://eips.ethereum.org/EIPS/eip-1108): Reduce alt_bn128 precompile gas costs
+- [EIP-1283](https://eips.ethereum.org/EIPS/eip-1283): Net gas metering for SSTORE without dirty maps
 - [EIP-1344](https://eips.ethereum.org/EIPS/eip-1344): Add ChainID opcode
 - [EIP-1706](https://eips.ethereum.org/EIPS/eip-1706): Disable SSTORE with gasleft lower than call stipend
 - [EIP-2028](https://eips.ethereum.org/EIPS/eip-2028): Calldata gas cost reduction
