--- a/_specs/ecip-1089.md
+++ b/_specs/ecip-1089.md
@@ -2,7 +2,7 @@
 lang: en
 ecip: 1089
 title: Phoenix EVM and Protocol Upgrades (Classic Option)
-status: Draft
+status: Withdrawn
 type: Meta
 author: /raw PONG _GHMoaCXLT (@q9f)
 created: 2020-02-24
