move 1088 to last call

--- a/_specs/ecip-1088.md
+++ b/_specs/ecip-1088.md
@@ -1,8 +1,9 @@
 ---
 lang: en
 ecip: 1088
-title: Phoenix EVM and Protocol Upgrades (Vanilla Option)
-status: Draft
+title: Phoenix EVM and Protocol Upgrades
+status: Last Call
+review-period-end: 2020-03-31
 type: Meta
 author: /raw PONG _GHMoaCXLT (@q9f)
 created: 2020-02-24
@@ -12,8 +13,6 @@ discussions-to: https://github.com/ethereumclassic/ECIPs/issues/262
 ### Simple Summary
 
 Enable the outstanding Ethereum Foundation _Istanbul_ network protocol upgrades on the Ethereum Classic network in a hard-fork code-named _Phoenix_ to enable maximum compatibility across these networks.
-
-This is the _vanilla_ option equaling to a vanilla EIP-1679 _Istanbul_ option of the Ethereum Foundation network.
 
 ### Abstract
 
