_specs/ecip-1015.md is NOT valid:        {:created=>["cant be blank"]}
Signed-off-by: meows <b5c6@protonmail.com>

--- a/_specs/ecip-1015.md
+++ b/_specs/ecip-1015.md
@@ -6,6 +6,7 @@ author: Cody W Burns <cody.w.burns@ethereumclassic.org>
 status: Final
 type: Standards Track
 category: Core
+created: 2016-10-25
 ---
 
 * In reference to: EIP-150
