fix(ecip1021): s/Author/author/ fixes ecip_validator
Signed-off-by: meows <b5c6@protonmail.com>

--- a/_specs/ecip-1021.md
+++ b/_specs/ecip-1021.md
@@ -2,7 +2,7 @@
 lang: en
 ecip: 1021
 title: Token standard
-Author: Dexaran (@dexaran)
+author: Dexaran (@dexaran)
 status: Draft
 type: Standards Track
 category: ECBP
