fix(ecip1054): s/discussions-To/discussions-to/
Warning: _specs/ecip-1054.md     undefined method `discussions_To=` for #<EipValidator::Validator:0x000055d257337140>
Signed-off-by: meows <b5c6@protonmail.com>

--- a/_specs/ecip-1054.md
+++ b/_specs/ecip-1054.md
@@ -6,7 +6,7 @@ status: Final
 type: Meta
 author: Isaac Ardis <isaac.a@etclabs.org>
 created: 2019-02-11
-discussions-To: https://github.com/ethereumclassic/ECIPs/issues/67
+discussions-to: https://github.com/ethereumclassic/ECIPs/issues/67
 ---
 
 ### Simple Summary
