fix(ecip1055): +lang: en
_specs/ecip-1055.md is NOT valid:        {:lang=>['cant be blank']}

Signed-off-by: meows <b5c6@protonmail.com>

--- a/_specs/ecip-1055.md
+++ b/_specs/ecip-1055.md
@@ -1,5 +1,6 @@
 ---
 ecip: 1055
+lang: en
 title: Flyclient - Succinct PoW Using Merkle Mountain Ranges
 author: Zac Mitton (@zmitton)
 discussions-to: https://github.com/ethereumclassic/ECIPs/issues/144
