fix(ecip1063): fix frontmatter type, category
Signed-off-by: meows <b5c6@protonmail.com>

--- a/_specs/ecip-1063.md
+++ b/_specs/ecip-1063.md
@@ -5,7 +5,8 @@ title: Ethereum Classic Integrated Decentralized Oracles and Smart Contracts
 author: Jesse Nguyen <jessebaotruong@gmail.com>
 discussions-to: Community Discord #ecips
 status: Rejected
-type: Standard Track
+type: Standards Track
+category: Networking
 created: 2019-07-21
 ---
 
