fix(ecip1067): frontmatter issues wrt type, category
Signed-off-by: meows <b5c6@protonmail.com>

--- a/_specs/ecip-1067.md
+++ b/_specs/ecip-1067.md
@@ -3,7 +3,8 @@ lang: en
 ecip: 1067
 title: Standardize OS Level Management of Signature Handling ("invoke-signer")
 status: Withdrawn
-type: Interface
+type: Standards Track
+category: Interface
 discussions-to: https://github.com/ethereumclassic/ECIPs/issues/147
 author: Zac Mitton (@zmitton)
 created: 2019-02-07
