fix(ecip1070): +lang: en
Signed-off-by: meows <b5c6@protonmail.com>

--- a/_specs/ecip-1070.md
+++ b/_specs/ecip-1070.md
@@ -1,5 +1,6 @@
 ---
 ecip: 1070
+lang: en
 title: ProgPoW, a Programmatic Proof-of-Work, for Ethereum Classic
 author: Yaz Khoury <yaz@etccooperative.org>
 discussions-to: https://github.com/ethereumclassic/ECIPs/issues/172
