fix(ecip1076): type, category
Signed-off-by: meows <b5c6@protonmail.com>

--- a/_specs/ecip-1076.md
+++ b/_specs/ecip-1076.md
@@ -5,7 +5,8 @@ title: Mining Algorithm Change Process
 author: Talha Cross (@soc1c)
 discussions-to: https://github.com/ethereumclassic/ECIPs/issues/174
 status: Draft
-type: ECBP
+type: Standards Track
+category: ECBP
 created: 2019-11-16
 ---
 
