fix(ecip1085): +category: core
Signed-off-by: meows <b5c6@protonmail.com>

--- a/_specs/ecip-1085.md
+++ b/_specs/ecip-1085.md
@@ -5,6 +5,7 @@ title: Simple Subroutines for the EVM
 author: Greg Colvin (@gcolvin) and Bob Summerwill (@bobsummerwill)
 status: Draft
 type: Standards Track
+category: Core
 created: 2020-02-02
 license: CC-BY-SA-4.0
 discussions-to: https://ethereum-magicians.org/t/eip-2315-simple-subroutines-for-the-evm/3941
