fix: remove core in type
Co-Authored-By: meowsbits <45600330+meowsbits@users.noreply.github.com>

--- a/_specs/ecip-1083.md
+++ b/_specs/ecip-1083.md
@@ -4,7 +4,8 @@ title: Remove Contract Size Limit
 author: Zachary Belford <@BelfordZ>, Mudit Gupta <@maxsam4>
 discussions-to: https://github.com/ethereum/EIPs/issues/1662
 status: Draft
-type: Standards Track (Core)
+type: Standards Track
+category: Core
 created: 2019-12-20
 ---
 
