--- a/_specs/ecip-1087.md
+++ b/_specs/ecip-1087.md
@@ -1,14 +1,14 @@
 ---
 lang: en
-ecip: 1087	ecip: 1087
-title: ECIP1061/ECIP1078/ECIP1086 on Mordor Testnet (with rollback)	title: ECIP1061/ECIP1078/ECIP1086 on Mordor Testnet (with rollback)
-discussions-to: TBD	discussions-to: TBD
+ecip: 1087
+title: ECIP1061/ECIP1078/ECIP1086 on Mordor Testnet (with rollback)
+discussions-to: TBD
 author: 
-status: Withdrawn	status: Withdrawn
-type: Standards Track (Core)	type: Standards Track
-created: 2020-02-20	created: 2020-02-20
-license: Apache-2.0	license: Apache-2.0
-requires: ECIP1061 ECIP1078 ECIP1086	requires: ECIP1061 ECIP1078 ECIP1086
+status: Withdrawn
+type: Standards Track
+created: 2020-02-20
+license: Apache-2.0	
+requires: ECIP1061 ECIP1078 ECIP1086	
 ---
 
 ### Abstract
