git checkout maste -- _specs/ecip-1000.md
Signed-off-by: meows <b5c6@protonmail.com>

--- a/_specs/ecip-1000.md
+++ b/_specs/ecip-1000.md
@@ -132,7 +132,7 @@ Each ECIP must begin with an RFC 822 style header preamble. The headers must app
 - **Comments-Summary:** (summary tone)
 - **Comments-URI:** (links to wiki page for comments)
 - **Status:** (Draft | Last Call | Accepted | Final | Deferred | Replaced | Rejected | Withdrawn)
-- **Type:** (Standards Track | Informational | Meta | Fork)
+- **Type:** (Standards Track | Informational | Process)
 - **Created:** (date created on, in ISO 8601 (yyyy-mm-dd) format)
 - **License:** (abbreviation for approved license(s))
 - **License-Code:** (abbreviation for code under different approved license(s))
@@ -151,7 +151,7 @@ If there are multiple authors, each should be on a separate line following RFC 2
 
 While an ECIP is in private discussions (usually during the initial Draft phase), a`Discussions-To` header will indicate the mailing list or URL where the ECIP is being discussed. No `Discussions-To` header is necessary if the ECIP is being discussed privately with the author.
 
-The `Type` header specifies the type of ECIP: Standards Track, Informational, Meta, Fork.
+The `Type` header specifies the type of ECIP: Standards Track, Informational, or Process.
 
 The `Created` header records the date that the ECIP was assigned a number.
 
