include ecip-X-FORK.md content in ecip itself
Make changeset more streamlined.

Signed-off-by: meows <b5c6@protonmail.com>

--- a/_specs/ecip-1077.md
+++ b/_specs/ecip-1077.md
@@ -72,6 +72,48 @@ _Unique_ means not the same as another thing; in this case, not precisely duplic
 
 This proposal specifies that all Fork ECIPs in `Draft` state or earlier should contain NO information about ECIP-sets or block activation numbers (all `TBD`). Proposed specifications to fill these placeholders should be made in the form of distinct and separate propsed change sets (eg Github Pull Requests) to the Fork ECIP document. The changesets are required to be UNIQUE and COMPLETE.
 
+There might be an `ecip-X-FORK.md` file that would look something like this:
+
+```
+---
+lang: en
+ecip: <ECIP number>
+title: <ECIP title>
+author: <list of authors' real names and optionally, email addrs>
+discussions-to: <email address>
+status: <WIP | Draft>
+type: Fork
+created: <date created on, in ISO 8601 (yyyy-mm-dd) format>
+replaces: <ECIP number>
+superseded-by: <ECIP number>
+resolution: <url>
+---
+
+### Abstract
+
+Specifying a next hardfork for the following networks:
+
+- <Network Name or Identifier>
+- <Network Name or Identifier>
+
+### Motivation
+
+### Specification
+
+- __Block Activation Number(s)__: 
+  + <Network Name or Identifier>: `TBD`
+  + <Network Name or Identifier>: `TBD`
+
+- __Feature specification(s)__:
+  + TBD
+
+### Rationale
+
+### Implementation
+
+### Copyright/Licensing
+```
+
 ### Rationale
 
 The sole purpose of a Fork ECIP is to join a block number (activation block) with a set of `n >= 1` Standards-Core type IPs containing protocol-facing changes. The document says "_These_ features will activate at _this_ moment."
