--- a/_specs/ECIP-0001.md
+++ b/_specs/ECIP-0001.md
@@ -2,7 +2,7 @@
 lang: en
 ecip: 0001
 title: ECIP Process
-status: Draft
+status: Withdrawn
 type: Meta
 discussions-to: https://github.com/ethereumclassic/ECIPs/issues/276
 author: Donald McIntyre (@TokenHash)
